--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <img src="./images/athie.png" alt="Athenkosi Magada">
             </div>
             <div class="card">
-                <p>HI, MY NAME IS ATHENKOSI MAGADA. I LOVE CODING DESIGNING AND CODING WEBSITES. FEEL WITH TO CONTACT ME TO COLLABORATE TOGETHER ON A PROJECT.</p>
-                <a href="#" class="btn">
+                <p>HI, MY NAME IS ATHENKOSI MAGADA. I LOVE DESIGNING AND CODING WEBSITES. FEEL WITH TO CONTACT ME TO COLLABORATE TOGETHER ON A PROJECT.</p>
+                <a href="#contact" class="btn">
                     <span>CONTACT ME</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
@@ -78,21 +78,21 @@
                 </div>
 
                 <div class="card">
-                    <h3 class="company">UMUZI.ORG</h3>
-                    <P class="job">LEARNERSHIP</P>
-                    <p class="date">APRIL 2021 - PRESENT</p>
-                    <P class="description">
-                        I AM UPSKILLING IN WEB DEVELOPMENT TECHNOLOGIES LIKE JS, EXPRESS, POSTGRESQL, DOCKER, GIT AND GITHUB. 
-                    </P>
+                    <h3 class="company">NELSON MANDELA UNIVERSITY</h3>
+                    <p class="job">STUDENT ASSISTANCE</p>
+                    <p class="date">MAR 2022 - JUN 2023</p>
+                    <p class="description">
+                        Facilitated sessions for 80+ students, conducted code reviews in C#, and invigilated exams, ensuring academic integrity.
+                    </p>
                 </div>
 
                 <div class="card">
-                    <h3 class="company">UMUZI.ORG</h3>
-                    <P class="job">LEARNERSHIP</P>
-                    <p class="date">APRIL 2021 - PRESENT</p>
-                    <P class="description">
-                        I AM UPSKILLING IN WEB DEVELOPMENT TECHNOLOGIES LIKE JS, EXPRESS, POSTGRESQL, DOCKER, GIT AND GITHUB. 
-                    </P>
+                    <h3 class="company">HLIMIS’IMFUNDO</h3>
+                    <p class="job">TUTOR VOLUNTEER</p>
+                    <p class="date">APR 2021 - JUN 2021</p>
+                    <p class="description">
+                        Provided tailored Mathematics tutoring for Grades 8, 11, and 12, fostering engagement and analysing over 100 tests to address student needs.
+                    </p>
                 </div>
         </section>
 
